<resources>

    <string name="app_name">One Word Day</string>

    <string name="action_settings">Settings</string>
    <string name="parse_table_daily_word">DailyWord</string>
    <string name="btn_after_submit">Submit again tomorrow!</string>
    <string name="application_id">com.example.garrisonthomas.onewordday</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_view_results">View Results</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_main_question">How did today make you feel?</string>
    <string name="et_word_hint">Enter one word…</string>
    <string name="tv_main_title">One Word Day</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_email_hint">Email Address</string>
    <string name="menu_logout">Logout</string>
    <string name="auth_username_hint">Username</string>
    <string name="toast_no_internet">No internet connection</string>
    <string name="toast_login_failed">Login failed. Please try again</string>
    <string name="auth_label">Login</string>
    <string name="developer_website">http://garrisonthomas.com/</string>
    <string name="menu_text_developer_website">Developer Website</string>
    <string name="main_et_hint">Today was…</string>
    <string name="action_search">Search</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>


</resources>
